test/sematest/invalid/unary_expressions3.java
class A {
    public static void main(String[] args){
        boolean a = -(new int[1]);
    }
}